<resources>
    <string name="app_name">Bazar.</string>

    <!--    onboarding -->
    <string name="fragment1_title">Now reading books will be easier</string>
    <string name="fragment1_txt">Discover new worlds, join a vibrant reading community. Start your reading adventure effortlessly with us.</string>

    <string name="fragment2_title">Your Bookish Soulmate Awaits</string>
    <string name="fragment2_txt">Let us be your guide to the perfect read. Discover books tailored to your tastes for a truly rewarding experience.</string>

    <string name="fragment3_title">Start Your Adventure</string>
    <string name="fragment3_txt">Ready to embark on a quest for inspiration and knowledge? Your adventure begins now. Let\'s go!</string>

    <!--    Sign in / Sign up -->
    <string name="signin_title">Welcome Back 👋</string>
    <string name="signin_txt">Sign to your account</string>
    <string name="login_btn">Login</string>
    <string name="signup">Sign Up</string>
    <string name="register_btn">Sign Up</string>
    <string name="signup_txt">Create account and choose favorite menu</string>

    <string name="congrat">Congratulation!</string>
    <string name="congrat_txt">your account is complete, please enjoy the best menu from us.</string>
    <string name="getStarted">Get Started</string>

    <string name="email_label">Email</string>
    <string name="email_placeholder">Your email</string>
    <string name="password_label">Password</string>
    <string name="password_placeholder">Your password</string>

    <string name="forget_password">Forgot Password?</string>
    <string name="doNotHaveAcc">Don’t have an account?</string>
    <string name="HaveAcc">Have an account?</string>
    <string name="orWith">Or with</string>
    <string name="signin_google">Sign in with Google</string>
    <string name="signin_apple">Sign in with Apple</string>
    <string name="terms_policy">By clicking Register, you agree to our Terms and Data Policy.</string>

    <!--    stuff-->
    <string name="home">Home</string>
    <string name="special_offer">Special Offer</string>
    <string name="special_vip_offer">Special VIP Offer</string>
    <string name="discount_25">Discount 25%</string>
    <string name="discount_50">Discount 50%</string>
    <string name="discount_99">Discount 99%</string>
    <string name="order_now">Order Now</string>
    <string name="explore_now">Explore Now</string>
    <string name="top_of_week">Top of Week</string>
    <string name="see_all">See all</string>
    <string name="the_kite_runner">The Kite Runner</string>
    <string name="vendors">Vendors</string>
    <string name="authors">Authors</string>
    <string name="john_freeman">John Freeman</string>
    <string name="writer">Writer</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra dignissim ac ac ac. Nibh et sed ac, eget malesuada.</string>
    <string name="review">Review</string>
    <string name="logo">LOGO</string>
    <string name="favorite">Favorite</string>
    <string name="thumnail">thumnail</string>
    <string name="_4_0">(4.0)</string>
    <string name="_39_99">$39.99</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="view_cart">View cart</string>
    <string name="wattpad">Wattpad</string>
    <string name="our_vendors">Our Vendors</string>
    <string name="vendords">Vendords</string>
    <string name="books">Books</string>
    <string name="check_the_authors">Check the authors</string>
    <string name="american_writer_he_was_the_editor_of_the">American writer he was the editor of the</string>
    <string name="demo_2">Gunty was born and raised in South Bend, Indiana.She graduated from the University of Notre Dame with a Bachelor of Arts in English and from New York University.</string>
    <string name="about">About</string>
    <string name="default_qty">1</string>


    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="gooday">GooDay</string>
</resources>